# Reinforcement_Learning_projects

Battery_solar_charging/reinforcement_exp/configs/: default.yaml
Battery_solar_charging/reinforcement_exp/src/battery_opt/agents/RL_agents/: q_learning.py
Battery_solar_charging/reinforcement_exp/src/battery_opt/data/ETL/: augrid_transform.py
Battery_solar_charging/reinforcement_exp/src/battery_opt/data/calculate_costs/: calculate_costs_augrid.py  calculate_costs_voltaware.py
Battery_solar_charging/reinforcement_exp/src/battery_opt/env/: battery_env_v0.py  create_episodes.py  run_simulation.py
RL_learning/reinforcement_exp/: pyproject.toml
RL_learning/reinforcement_exp/notebooks/: dataset_exploration.ipynb  rl_exploration.ipynb
RL_learning/reinforcement_exp/src/battery_opt/agents/: __init__.py  base.py
RL_learning/reinforcement_exp/src/battery_opt/agents/baseline_policies/: baseline.py
RL_learning/reinforcement_exp/src/battery_opt/data/: create_episodes.py
RL_learning/reinforcement_exp/src/battery_opt/data/ETL/: merge_augrid.py  voltaware_transform.py
RL_learning/reinforcement_exp/src/battery_opt/env/: __init__.py  battery_env.py
RL_learning/reinforcement_exp/tests/agents/: test_q_learning.py
RL_learning/reinforcement_exp/tests/data/: test_calculate_costs.py  test_create_episodes.py  test_load_transform.py
RL_learning/reinforcement_exp/tests/env/: test_battery_env.py  test_run_simulation.py
