[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-opt"
version = "0.1.0"
description = "Reinforcement learning for home battery charge/discharge optimisation"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/battery_opt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # don't require type hints in tests

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true